   The previous configuration will be moved to the new location if
   the new directory doesn't exist yet.
   Move utils_make_settings_dir() into main.c.
   Remove win32_get_appdata_folder() because g_get_user_config_dir()
   does the same.


2008-11-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Fix indenting for Tabs & Spaces mode when inserting snippets.


2008-11-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/c.c:
   Fix indentation to consistently use tabs (patch by Colomban Wendling,
   thanks).


2008-11-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c:
   Fix empty statements and possible memory leaks with
   utils_free_pointers() in utils_str_casecmp().
 * plugins/splitwindow.c, src/about.c, THANKS:
   Add Split Vertically command (patch by Moritz Barsnick, thanks;
   #2219553).


2008-11-11  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/Makefile.am, wscript, waf:
   Improve the checking for 'rst2html.py' when creating HTML docs.
   Update Waf to 1.5.0 (final).
 * plugins/export.c:
   Use 'utf8' as encoding package in the LaTeX template as it seems it
   is the most used version for UTF-8 support.
 * src/utils.c:
   Evaluate only the strings 'TRUE' and 'true' to true in utils_atob(),
   any other string is treated as false.
 * src/document.c, src/plugindata.h, src/plugins.c, src/templates.c,
   src/utils.c, src/utils.h:
   Replace uses of g_strcasecmp() with our own implementation,
   utils_str_casecmp().
   Add utils_str_casecmp() to the plugin API.
 * doc/Doxyfile.in, src/plugindata.h:
   Remove obsolete tag in Doxyfile.in.
   Fix doxygen warnings for undocumented enum in plugindata.h.
 * THANKS, src/about.c, src/templates.c:
   Add a file template for LaTeX (patch by Herbert Voss, thanks).


2008-11-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c, src/plugindata.h, src/about.c, src/filetypes.c,